# boldi-python

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi.yml
.pygithooks/: .gitignore
.pygithooks/post-checkout/: pdm-sync-clean.sh  uv-sync-frozen.sh
.pygithooks/pre-commit/: mypy.sh  ruff-check.sh  ruff-format-diff.sh
boldi/: cli.py  ctx.py  plugins.py
boldi/cli/: __main__.py
boldi/dev/: __init__.py  cli.py  package.py
docs/: boldi.md  cli.md  ctx.md  dev.md  index.md  plugins.md  proc.md
docs/stylesheets/: boldi.css
pkg/: .gitignore
pkg/boldi/: pyproject.toml
pkg/boldi-aoc/: pyproject.toml
pkg/boldi-aoc/boldi/aoc/: __init__.py  _template.py  y2024d1.py  y2024d1b.py  y2024d2.py  y2024d2b.py  y2024d3.py  y2024d3b.py  y2024d4.py
pkg/boldi-api/: pyproject.toml
pkg/boldi-api/boldi/api/: asgi.py  cli.py  settings.py  wsgi.py
pkg/boldi-backup/: pyproject.toml
pkg/boldi-backup/boldi/: backup.py
pkg/boldi-build/: pyproject.toml
pkg/boldi-build/boldi/: build.py
pkg/boldi-cli/: pyproject.toml
pkg/boldi-cli/boldi/: cli.py
pkg/boldi-ctx/: pyproject.toml
pkg/boldi-ctx/boldi/: ctx.py
pkg/boldi-dev/: pyproject.toml
pkg/boldi-dev/boldi/: dev.py
pkg/boldi-dev/boldi/dev/: cli.py  docs.py  package.py
pkg/boldi-dotmodpath/: boldi-dotmodpath.pth  pyproject.toml
pkg/boldi-dotmodpath/boldi/: dotmodpath.py
pkg/boldi-githooks/: pyproject.toml
pkg/boldi-githooks/boldi/: githooks.py
pkg/boldi-githooks/boldi/githooks/: __init__.py  __main__.py  _pygithooks.py
pkg/boldi-githubwebhooks/: pyproject.toml
pkg/boldi-githubwebhooks/boldi/: githubwebhooks.py
pkg/boldi-plugins/: LICENSE  pyproject.toml
pkg/boldi-plugins/boldi/: plugins.py
pkg/boldi-proc/: pyproject.toml
pkg/boldi-proc/boldi/: proc.py
pkg/boldi-run/: pyproject.toml
pkg/boldi-sitebuilder/: pyproject.toml
pkg/boldi-sitebuilder/boldi/: sitebuilder.py
pkg/boldi-webalbum/: pyproject.toml
pkg/boldi-webalbum-app/: pyproject.toml
pkg/boldi-webalbum-app/boldi/webalbum/: app.py
pkg/boldi-webalbum-app/boldi/webalbum/app/: asgi.py  cli.py  settings.py  wsgi.py
pkg/boldi-webalbum/boldi/: webalbum.py
pkg/boldi-webalbum/boldi/webalbum/: __init__.py  __main__.py  masonry.py
pkg/boldi-webalbum/boldi/webalbum/templates/: index.html.j2  masonry.html.j2
pkg/boldi-webalbum/boldi/webalbum/templates/static/: script.js  style.css
pkg/boldi/boldi/: __main__.py
pkg/cli/: pyproject.toml
pkg/ctx/: pyproject.toml
pkg/dev/: pyproject.toml
pkg/pygithook/: hatch_hooks.py  pyproject.toml
pkg/pygithook/pygithook/: __init__.py  __main__.py
pkg/pygithooks/: pyproject.toml
pkg/pygithooks/pygithooks/: __init__.py  __main__.py  _pygithooks.py
