[project]
name = "boldi-devmetapackage"
description = "Development Metapackage for Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs", "packaging"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["."]

[tool.uv]
dev-dependencies = [
    # boldi dependencies
    "boldi[dev]",
    "boldi-backup",
    "boldi-build",
    "boldi-cli",
    "boldi-ctx[dev]",
    "boldi-dev",
    "boldi-githooks",
    "boldi-plugins",
    "boldi-proc",
    "boldi-webalbum",
    # build dependencies
    "uv",
    "hatch",
    "hatchling",
    "hatch-vcs",
    "build",
    "setuptools_scm",
    "packaging",
]
package = false

[tool.uv.sources]
boldi = { workspace = true }
boldi-backup = { workspace = true }
boldi-build = { workspace = true }
boldi-cli = { workspace = true }
boldi-ctx = { workspace = true }
boldi-dev = { workspace = true }
boldi-githooks = { workspace = true }
boldi-plugins = { workspace = true }
boldi-proc = { workspace = true }
boldi-webalbum = { workspace = true }

[tool.uv.workspace]
members = ["pkg/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # sort imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["boldi", "boldi.*"]

[tool.mypy]
packages = [
    "boldi",
    "boldi.backup",
    "boldi.build",
    "boldi.cli",
    "boldi.ctx",
    "boldi.githooks",
    "boldi.plugins",
    "boldi.proc",
    "boldi.webalbum",
]
mypy_path = "pkg/boldi:pkg/boldi-backup:pkg/boldi-build:pkg/boldi-cli:pkg/boldi-ctx:pkg/boldi-githooks:pkg/boldi-plugins:pkg/boldi-proc:pkg/boldi-webalbum"
check_untyped_defs = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
