[project]
name = "boldi-devmetapackage"
description = "Development Metapackage for Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[dependency-groups]
dev = [    # boldi dependencies
    "boldi[dev]",
    "boldi-api",
    "boldi-backup",
    "boldi-build",
    "boldi-cli",
    "boldi-ctx[dev]",
    "boldi-dev",
    "boldi-githooks",
    "boldi-plugins",
    "boldi-proc",
    "boldi-webalbum",
    "boldi-webalbum-app[dev]",
    # build dependencies
    "uv",
    "hatch",
    "hatchling",
    "hatch-vcs",
    "build",
    "setuptools_scm",
    "packaging",
]

[build-system]
requires = ["hatchling", "hatch-vcs", "packaging"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["."]

[tool.uv]
package = false

[tool.uv.sources]
boldi = { workspace = true }
boldi-api = { workspace = true }
boldi-backup = { workspace = true }
boldi-build = { workspace = true }
boldi-cli = { workspace = true }
boldi-ctx = { workspace = true }
boldi-dev = { workspace = true }
boldi-githooks = { workspace = true }
boldi-plugins = { workspace = true }
boldi-proc = { workspace = true }
boldi-webalbum = { workspace = true }
boldi-webalbum-app = { workspace = true }

[tool.uv.workspace]
members = ["pkg/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # sort imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["boldi", "boldi.*"]

[tool.mypy]
packages = [
    "boldi",
    "boldi.api",
    "boldi.backup",
    "boldi.build",
    "boldi.cli",
    "boldi.ctx",
    "boldi.githooks",
    "boldi.plugins",
    "boldi.proc",
    "boldi.webalbum",
    "boldi.webalbum.app",
]
mypy_path = "pkg/boldi:pkg/boldi-api:pkg/boldi-backup:pkg/boldi-build:pkg/boldi-cli:pkg/boldi-ctx:pkg/boldi-githooks:pkg/boldi-plugins:pkg/boldi-proc:pkg/boldi-webalbum:pkg/boldi-webalbum-app"
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "boldi.webalbum.app.settings"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
