[project]
name = "boldi-aoc"
description = "boldi.aoc: Boldi's Advent of Code solutions"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    "boldi-cli",
]
optional-dependencies = {}

[project.entry-points."boldi.cli.action"]
aoc = "boldi.aoc:cli_aoc"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_aoc_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
