[project]
name = "boldi-api"
description = "boldi.api part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    # boldi:
    "Django>=5.1",
]

[project.optional-dependencies]
dev = ["django-stubs"]

[project.entry-points."boldi.cli.action"]
api = "boldi.api.cli:cli_api"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_api_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
