[project]
name = "boldi-cli"
version = "0.1.1"
description = "boldi.cli part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { text = "MIT" }

dependencies = ["boldi-ctx", "rich"]
optional-dependencies = {}

[project.scripts]
boldi = "boldi.cli:main"

[project.entry-points."boldi.cli.action"]
help = "boldi.cli:HelpCliAction"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.pdm]

[tool.pdm.dev-dependencies]
