[project]
name = "boldi-cli"
description = "boldi.cli part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.10"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = ["boldi-ctx", "boldi-plugins", "rich"]
optional-dependencies = {}

[project.scripts]
boldi = "boldi.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_cli_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
