[project]
name = "boldi-ctx"
version = "0.1.0"
description = "boldi.ctx part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { file = "../../LICENSE" }

dependencies = ["typing_extensions"]
optional-dependencies = {}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# [tool.hatch.build.targets.sdist]
# sources = ["../.."]
# include = ["boldi/ctx.py"]
# packages = ["../../boldi"]

# [tool.hatch.build.targets.wheel]
# sources = ["../.."]
# include = ["boldi/ctx.py"]
# packages = ["boldi"]

[tool.pdm]

[tool.pdm.dev-dependencies]
# dev1 = ["pytest"]
# dev2 = ["mkdocs"]

[tool.pdm.build]
package-dir = "../.."
includes = ["../../boldi", "../../boldi/ctx.py"]
excludes = ["../../boldi/*"]
# source-includes = []
