[project]
name = "boldi-dev"
description = "boldi.dev part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    # boldi:
    "boldi-cli",
    "boldi-ctx",
    # public:
    "ruff",
    "mypy",
    "sphinx",
]
optional-dependencies = {}

[project.entry-points."boldi.cli.action"]
dev = "boldi.dev:DevCliAction"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_dev_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }

[tool.pdm]

[tool.pdm.dev-dependencies]
