[project]
name = "boldi-dev"
description = "boldi.dev part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    # boldi:
    "boldi-cli",
    "boldi-ctx",
    # linting and type checking:
    "ruff",
    "mypy",
    # docs:
    "mkdocs-autorefs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mdx-truly-sane-lists",
]
optional-dependencies = {}

[project.entry-points."boldi.cli.action"]
dev = "boldi.dev:cli_dev"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_dev_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
