[project]
name = "boldi-dotmodpath"
description = "boldi.dotmodpath part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = []
optional-dependencies = {}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.build.targets.sdist]
include = ["boldi", "boldi-*.pth"]

[tool.hatch.build.targets.wheel]
include = ["boldi", "boldi-*.pth"]

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_dotmodpath_version.py"

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
