[project]
name = "boldi-githooks"
description = "boldi-githooks - Simple Git Hooks manager for Python projects"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.12"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    # boldi:
    "boldi-cli",
    # public:
    "rich",
]

[project.scripts]
pygithooks = "boldi.githooks:main"

[project.entry-points."boldi.cli.action"]
githooks = "boldi.githooks:cli_githooks"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_githooks_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
