[project]
name = "boldi-githubwebhooks"
description = "boldi.githubwebhooks part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.10"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    # public libs:
    "fastapi",
    "loguru",
    "pydantic",
    "starlette",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_hooks.py"

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_githubwebhooks_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
