[project]
name = "boldi-plugins"
version = "0.1.1"
description = "boldi.plugins part of Boldi's Python libraries"
authors = [
    {name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com"},
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { text = "MIT" }

dependencies = [
    "backports.entry-points-selectable",
]
optional-dependencies = {}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.pdm]

[tool.pdm.dev-dependencies]
