[project]
name = "boldi-plugins"
description = "boldi.plugins part of Boldi's Python libraries"
authors = [
    {name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com"},
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { text = "MIT" }
dynamic = ["version"]

dependencies = [
    "backports.entry-points-selectable",
]
optional-dependencies = {}

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.hatch.build.hooks.vcs]
version-file = "boldi/_plugins_version.py"

[tool.hatch.version]
source = "vcs"
raw-options = { "root" = "../.." }
