[project]
name = "boldi-proc"
version = "0.1.0"
description = "boldi.proc part of Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { text = "MIT" }

dependencies = ["boldi-ctx"]
optional-dependencies = {}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]
# dev1 = ["pytest"]
# dev2 = ["mkdocs"]

[tool.pdm.build]
includes = ["../../boldi", "../../boldi/proc"]
excludes = ["../../boldi/*"]
# source-includes = []
