[project]
name = "boldi-run"
version = "0.1.0"
description = "boldi.run part of Boldi's Python libraries"
authors = [
    {name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com"},
]
requires-python = ">=3.8"
readme = "../../README.md"
license = {text = "MIT"}

dependencies = [
    "boldi-ctx",
]

[project.optional-dependencies]
# extra1 = ["package1a", "package1b"]
# extra2 = ["package2"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]
# dev1 = ["pytest"]
# dev2 = ["mkdocs"]

[tool.pdm.build]
includes = ["../../boldi", "../../boldi/run"]
excludes = ["../../boldi/*"]
# source-includes = []
