[project]
name = "boldi"
version = "0.1.0"
description = "Boldi's Python libraries"
authors = [
    {name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com"},
]
requires-python = ">=3.9"
readme = "../../README.md"
license = {text = "MIT"}

dependencies = [
    "boldi-ctx",
    "boldi-cli",
    "boldi-plugins",
    "boldi-run",
]

[project.optional-dependencies]
dev = [
    "boldi-dev",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]

[tool.pdm.build]
includes = []
# excludes = ["../../boldi/*"]
# source-includes = []
