[project]
name = "boldi"
version = "0.1.0"
description = "Boldi's Python libraries"
authors = [
    { name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com" },
]
requires-python = ">=3.9"
readme = "../../README.md"
license = { file = "../../LICENSE" }

dependencies = [
    # boldi libs:
    "boldi-ctx",
    "boldi-cli",
    "boldi-plugins",
]
optional-dependencies = { dev = ["boldi-dev"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["boldi"]

[tool.pdm]

[tool.pdm.dev-dependencies]
