[project]
name = "boldi-dev"
version = "0.1.0"
description = "boldi.dev part of Boldi's Python libraries"
authors = [
    {name = "Boldizsár Palotás", email = "boldizsar.palotas@gmail.com"},
]
requires-python = ">=3.8"
readme = "../../README.md"
license = {text = "MIT"}

dependencies = [
    "boldi-cli",
    "boldi-ctx",
    "pluggy",
]

[project.optional-dependencies]
# extra1 = ["flask"]
# extra2 = ["django"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.dev-dependencies]
# dev1 = ["pytest"]
# dev2 = ["mkdocs"]

[tool.pdm.build]
includes = ["../../boldi", "../../boldi/dev"]
excludes = ["../../boldi/*"]
# source-includes = []
